--- a/lab_6_web_crawling.ipynb
+++ b/lab_6_web_crawling.ipynb
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "id": "adcd55ac",
    "metadata": {},
    "outputs": [],
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 12,
    "id": "40bc10bd",
    "metadata": {},
    "outputs": [],
@@ -156,28 +156,29 @@
     "depth = 3 #@param {type:\"slider\", min:1, max:10, step:1}\n",
     "max_child = 10 #@param {type:\"slider\", min:1, max:100, step:1}\n",
     "\n",
+    "    \n",
     "def crawl(sites, depth=1, current_depth=0, max_child=10):\n",
+    "    \n",
     "    get_links = lambda site: pd.Series(urljoin(site, tag.get('href')) for tag in BeautifulSoup(requests.get(site).text).find_all('a')).drop_duplicates().head(max_child)\n",
-    "    \n",
-    "    sites = sites.append(pd.DataFrame([{'link': link, 'parent': site, 'depth': current_depth + 1}\n",
-    "                                       for site in sites[sites.depth == current_depth].link\n",
-    "                                       for link in get_links(site)]), \n",
-    "                         ignore_index=True).drop_duplicates('link')\n",
-    "    \n",
+    "\n",
+    "    sites = pd.concat([sites, pd.DataFrame([{'link': link, 'parent': site, 'depth': current_depth + 1}\n",
+    "                                               for site in sites[sites.depth == current_depth].link\n",
+    "                                               for link in get_links(site)]).drop_duplicates('link')], ignore_index=True)\n",
     "    if depth > current_depth + 1:\n",
     "        return crawl(sites, depth=depth, current_depth=current_depth+1, max_child=max_child)\n",
     "    else:\n",
+    "    \n",
     "        return sites\n",
     "\n",
     "\n",
     "result = crawl(sites=pd.DataFrame([{'link': site, 'depth': 0, 'parent': site} for site in sites.split()]), \n",
     "               max_child=max_child,\n",
-    "               depth=depth)"
+    "               depth=depth) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 13,
    "id": "6c7ceb7a",
    "metadata": {},
    "outputs": [
@@ -245,38 +246,38 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>487</th>\n",
+       "      <th>303</th>\n",
        "      <td>https://support.google.com/websearch/?hl=en</td>\n",
        "      <td>3</td>\n",
        "      <td>https://support.google.com/websearch/?p=displa...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>488</th>\n",
+       "      <th>304</th>\n",
        "      <td>https://support.google.com/websearch/community...</td>\n",
        "      <td>3</td>\n",
        "      <td>https://support.google.com/websearch/?p=displa...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>491</th>\n",
+       "      <th>305</th>\n",
        "      <td>https://support.google.com/websearch/?p=result...</td>\n",
        "      <td>3</td>\n",
        "      <td>https://support.google.com/websearch/?p=result...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>495</th>\n",
+       "      <th>306</th>\n",
        "      <td>https://accounts.google.com/ServiceLogin?hl=en...</td>\n",
        "      <td>3</td>\n",
        "      <td>https://support.google.com/websearch/?p=result...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>498</th>\n",
+       "      <th>307</th>\n",
        "      <td>https://support.google.com/websearch/community...</td>\n",
        "      <td>3</td>\n",
        "      <td>https://support.google.com/websearch/?p=result...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>227 rows × 3 columns</p>\n",
+       "<p>308 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -287,11 +288,11 @@
        "3                https://play.google.com/?hl=km&tab=w8      1   \n",
        "4                      https://news.google.com/?tab=wn      1   \n",
        "..                                                 ...    ...   \n",
-       "487        https://support.google.com/websearch/?hl=en      3   \n",
-       "488  https://support.google.com/websearch/community...      3   \n",
-       "491  https://support.google.com/websearch/?p=result...      3   \n",
-       "495  https://accounts.google.com/ServiceLogin?hl=en...      3   \n",
-       "498  https://support.google.com/websearch/community...      3   \n",
+       "303        https://support.google.com/websearch/?hl=en      3   \n",
+       "304  https://support.google.com/websearch/community...      3   \n",
+       "305  https://support.google.com/websearch/?p=result...      3   \n",
+       "306  https://accounts.google.com/ServiceLogin?hl=en...      3   \n",
+       "307  https://support.google.com/websearch/community...      3   \n",
        "\n",
        "                                                parent  \n",
        "0                              https://www.google.com/  \n",
@@ -300,16 +301,16 @@
        "3                              https://www.google.com/  \n",
        "4                              https://www.google.com/  \n",
        "..                                                 ...  \n",
-       "487  https://support.google.com/websearch/?p=displa...  \n",
-       "488  https://support.google.com/websearch/?p=displa...  \n",
-       "491  https://support.google.com/websearch/?p=result...  \n",
-       "495  https://support.google.com/websearch/?p=result...  \n",
-       "498  https://support.google.com/websearch/?p=result...  \n",
+       "303  https://support.google.com/websearch/?p=displa...  \n",
+       "304  https://support.google.com/websearch/?p=displa...  \n",
+       "305  https://support.google.com/websearch/?p=result...  \n",
+       "306  https://support.google.com/websearch/?p=result...  \n",
+       "307  https://support.google.com/websearch/?p=result...  \n",
        "\n",
-       "[227 rows x 3 columns]"
+       "[308 rows x 3 columns]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,11 +353,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "703fe53e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.1.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "print(pd.__version__)"
+   ]
   },
   {
    "cell_type": "code",
@@ -415,7 +428,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
