--- a/lab_6_web_crawling.ipynb
+++ b/lab_6_web_crawling.ipynb
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "adcd55ac",
    "metadata": {},
    "outputs": [],
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "40bc10bd",
    "metadata": {},
    "outputs": [],
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "6c7ceb7a",
    "metadata": {},
    "outputs": [
@@ -310,7 +310,7 @@
        "[308 rows x 3 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,12 +333,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 5,
    "id": "a41cc653",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'',\n",
+       " 'accounts',\n",
+       " 'admin',\n",
+       " 'blog',\n",
+       " 'calendar',\n",
+       " 'classroom',\n",
+       " 'console.cloud',\n",
+       " 'crisisresponse',\n",
+       " 'drive',\n",
+       " 'learning',\n",
+       " 'mail',\n",
+       " 'maps',\n",
+       " 'myaccount',\n",
+       " 'news',\n",
+       " 'play',\n",
+       " 'policies',\n",
+       " 'safety',\n",
+       " 'support',\n",
+       " 'sustainability',\n",
+       " 'trends',\n",
+       " 'workspace',\n",
+       " 'youtube'}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Task : write the regular expression to get all the services of google\n"
+    "#Task : write the regular expression to get all the services of google\n",
+    "import re\n",
+    "\n",
+    "google_services = set()\n",
+    "\n",
+    "def get_service(url):\n",
+    "    url = re.sub('.google.*|.com.*',\"\",url)\n",
+    "    url = re.sub('https://|http://|www.|www',\"\",url)\n",
+    "    return url\n",
+    "\n",
+    "for url in result['link']:\n",
+    "    google_services.add(get_service(url))\n",
+    "\n",
+    "google_services"
    ]
   },
   {
